; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/provisioning/manager/main/extr_app_main.c_get_device_service_name.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/provisioning/manager/main/extr_app_main.c_get_device_service_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"PROV_\00", align 1
@WIFI_IF_STA = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"%s%02X%02X%02X\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @get_device_service_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_device_service_name(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca [6 x i32], align 16
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  %7 = load i32, i32* @WIFI_IF_STA, align 4
  %8 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 0
  %9 = call i32 @esp_wifi_get_mac(i32 %7, i32* %8)
  %10 = load i8*, i8** %3, align 8
  %11 = load i64, i64* %4, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 3
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 4
  %16 = load i32, i32* %15, align 16
  %17 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 5
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @snprintf(i8* %10, i64 %11, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %12, i32 %14, i32 %16, i32 %18)
  ret void
}

declare dso_local i32 @esp_wifi_get_mac(i32, i32*) #1

declare dso_local i32 @snprintf(i8*, i64, i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
